syntax = "proto3";

message IPLDNodeData {
  MetadataType type = 1; // maxLength = 1
  int32 linkDepth = 2; // maxLength = 4
  optional int64 size = 3; // maxLength = 8
  optional string name = 4; // maxLength = 256
  optional bytes data = 5; // maxLength = XXX
  optional FileUploadOptions uploadOptions = 6; // maxLength = 100
  /// Reserve 100 bytes for future use
}

// MetadataType defines the possible types of metadata.
enum MetadataType {
  File = 0;
  FileInlink = 1;
  FileChunk = 2;
  Folder = 3;
  FolderInlink = 4;
  Metadata = 5;
  MetadataInlink = 6;
  MetadataChunk = 7;
}

message FileUploadOptions {
  optional CompressionOptions compression = 1;
  optional EncryptionOptions encryption = 2;
}

message CompressionOptions {
  CompressionAlgorithm algorithm = 1;
  optional int32 level = 2;
  optional int32 chunkSize = 3;
}

message EncryptionOptions {
  EncryptionAlgorithm algorithm = 1;
  optional int32 chunkSize = 2;
}

enum CompressionAlgorithm {
  ZLIB = 0;
}

enum EncryptionAlgorithm {
  AES_256_GCM = 0;
}
